ply/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> BEGIN ID OPEN_BRACE full_module masFullModules MAIN full_block CLOSE_BRACE END
Rule 2     asssign -> ID asssign1 SEMI_COLON
Rule 3     asssign1 -> OPEN_BRACKET asssign2
Rule 4     asssign1 -> ASSIGN expression
Rule 5     asssign2 -> expression CLOSE_BRACKET ASSIGN expression
Rule 6     asssign2 -> CLOSE_BRACKET ASSIGN OPEN_BRACE adata CLOSE_BRACE
Rule 7     adata -> expression adata
Rule 8     adata -> COMMA expression adata
Rule 9     adata -> <empty>
Rule 10    block -> OPEN_BRACE module masModule CLOSE_BRACE
Rule 11    masModule -> module masModule
Rule 12    masModule -> <empty>
Rule 13    condition -> IF OPEN_PAREN exp_expression CLOSE_PAREN block conditionaux
Rule 14    conditionaux -> ELSE block
Rule 15    conditionaux -> <empty>
Rule 16    readd -> READ OPEN_PAREN ID COMMA expression CLOSE_PAREN SEMI_COLON
Rule 17    printt -> PRINT OPEN_PAREN exp_expression CLOSE_PAREN SEMI_COLON
Rule 18    module -> statement
Rule 19    module -> variable
Rule 20    module -> f_call
Rule 21    exp_expression -> expression eee
Rule 22    eee -> OR ee eee
Rule 23    eee -> AND ee eee
Rule 24    eee -> <empty>
Rule 25    ee -> expression
Rule 26    ee -> <empty>
Rule 27    expression -> expression1 exp expression2
Rule 28    expression1 -> NEGATION
Rule 29    expression1 -> <empty>
Rule 30    expression2 -> GREATER_THAN expression1 exp
Rule 31    expression2 -> LESS_THAN expression1 exp
Rule 32    expression2 -> DIFFERENT expression1 exp
Rule 33    expression2 -> GREAT_EQUAL expression1 exp
Rule 34    expression2 -> LESS_EQUAL expression1 exp
Rule 35    expression2 -> EQUALS expression1 exp
Rule 36    expression2 -> <empty>
Rule 37    full_block -> OPEN_BRACE full_module masFullBlock CLOSE_BRACE
Rule 38    masFullBlock -> full_module masFullBlock
Rule 39    masFullBlock -> <empty>
Rule 40    full_module -> statement
Rule 41    full_module -> variable
Rule 42    full_module -> functionn
Rule 43    full_module -> f_call
Rule 44    masFullModules -> full_module masFullModules
Rule 45    masFullModules -> <empty>
Rule 46    statement -> printt
Rule 47    statement -> readd
Rule 48    statement -> condition
Rule 49    statement -> asssign
Rule 50    statement -> loop
Rule 51    type -> VOID
Rule 52    type -> BOOLEAN
Rule 53    type -> INT
Rule 54    type -> DOUBLE
Rule 55    type -> STRING
Rule 56    variable -> type var1 SEMI_COLON
Rule 57    var1 -> OPEN_BRACKET expression CLOSE_BRACKET var2
Rule 58    var1 -> var2
Rule 59    var2 -> ID var3
Rule 60    var3 -> COMMA var2
Rule 61    var3 -> <empty>
Rule 62    forr -> FOR OPEN_PAREN ID ASSIGN const SEMI_COLON expression SEMI_COLON ID expression CLOSE_PAREN block
Rule 63    loop -> forr
Rule 64    loop -> whilee
Rule 65    exp -> term exp1
Rule 66    exp1 -> PLUS term exp1
Rule 67    exp1 -> MINUS term exp1
Rule 68    exp1 -> <empty>
Rule 69    term -> factor term1
Rule 70    term1 -> TIMES factor term1
Rule 71    term1 -> DIVIDE factor term1
Rule 72    term1 -> <empty>
Rule 73    factor -> OPEN_PAREN expression CLOSE_PAREN
Rule 74    factor -> varconst
Rule 75    whilee -> WHILE OPEN_PAREN exp_expression CLOSE_PAREN block
Rule 76    f_module -> statement
Rule 77    f_module -> variable
Rule 78    f_module -> returnn
Rule 79    f_module -> f_call
Rule 80    f_block -> OPEN_BRACE f_module masFModule CLOSE_BRACE
Rule 81    masFModule -> f_module masFModule
Rule 82    masFModule -> <empty>
Rule 83    functionn -> FUNCTION type ID OPEN_PAREN params func1 CLOSE_PAREN f_block
Rule 84    func1 -> COMMA params func1
Rule 85    func1 -> <empty>
Rule 86    params -> type para1 ID
Rule 87    params -> <empty>
Rule 88    para1 -> OPEN_BRACKET CLOSE_BRACKET
Rule 89    para1 -> <empty>
Rule 90    varconst -> const
Rule 91    varconst -> constID
Rule 92    constID -> ID masconstID
Rule 93    masconstID -> OPEN_BRACKET expression CLOSE_BRACKET
Rule 94    masconstID -> <empty>
Rule 95    const -> CINT
Rule 96    const -> CDOUBLE
Rule 97    const -> constbool
Rule 98    const -> CSTRING
Rule 99    constbool -> TRUE
Rule 100   constbool -> FALSE
Rule 101   returnn -> RETURN exp_expression SEMI_COLON
Rule 102   f_call -> ID OPEN_PAREN adata CLOSE_PAREN SEMI_COLON

Terminals, with rules where they appear

AND                  : 23
ASSIGN               : 4 5 6 62
BEGIN                : 1
BOOLEAN              : 52
CDOUBLE              : 96
CINT                 : 95
CLOSE_BRACE          : 1 6 10 37 80
CLOSE_BRACKET        : 5 6 57 88 93
CLOSE_PAREN          : 13 16 17 62 73 75 83 102
COMMA                : 8 16 60 84
CSTRING              : 98
DIFFERENT            : 32
DIVIDE               : 71
DOUBLE               : 54
ELSE                 : 14
END                  : 1
EQUALS               : 35
FALSE                : 100
FOR                  : 62
FUNCTION             : 83
GREATER_THAN         : 30
GREAT_EQUAL          : 33
ID                   : 1 2 16 59 62 62 83 86 92 102
IF                   : 13
INT                  : 53
LESS_EQUAL           : 34
LESS_THAN            : 31
MAIN                 : 1
MINUS                : 67
NEGATION             : 28
OPEN_BRACE           : 1 6 10 37 80
OPEN_BRACKET         : 3 57 88 93
OPEN_PAREN           : 13 16 17 62 73 75 83 102
OR                   : 22
PLUS                 : 66
PRINT                : 17
READ                 : 16
RETURN               : 101
SEMI_COLON           : 2 16 17 56 62 62 101 102
STRING               : 55
TIMES                : 70
TRUE                 : 99
VOID                 : 51
WHILE                : 75
error                : 

Nonterminals, with rules where they appear

adata                : 6 7 8 102
asssign              : 49
asssign1             : 2
asssign2             : 3
block                : 13 14 62 75
condition            : 48
conditionaux         : 13
const                : 62 90
constID              : 91
constbool            : 97
ee                   : 22 23
eee                  : 21 22 23
exp                  : 27 30 31 32 33 34 35
exp1                 : 65 66 67
exp_expression       : 13 17 75 101
expression           : 4 5 5 7 8 16 21 25 57 62 62 73 93
expression1          : 27 30 31 32 33 34 35
expression2          : 27
f_block              : 83
f_call               : 20 43 79
f_module             : 80 81
factor               : 69 70 71
forr                 : 63
full_block           : 1
full_module          : 1 37 38 44
func1                : 83 84
functionn            : 42
loop                 : 50
masFModule           : 80 81
masFullBlock         : 37 38
masFullModules       : 1 44
masModule            : 10 11
masconstID           : 92
module               : 10 11
para1                : 86
params               : 83 84
printt               : 46
program              : 0
readd                : 47
returnn              : 78
statement            : 18 40 76
term                 : 65 66 67
term1                : 69 70 71
type                 : 56 83 86
var1                 : 56
var2                 : 57 58 60
var3                 : 59
varconst             : 74
variable             : 19 41 77
whilee               : 64

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . BEGIN ID OPEN_BRACE full_module masFullModules MAIN full_block CLOSE_BRACE END

    BEGIN           shift and go to state 1

    program                        shift and go to state 2

state 1

    (1) program -> BEGIN . ID OPEN_BRACE full_module masFullModules MAIN full_block CLOSE_BRACE END

    ID              shift and go to state 3


state 2

    (0) S' -> program .



state 3

    (1) program -> BEGIN ID . OPEN_BRACE full_module masFullModules MAIN full_block CLOSE_BRACE END

    OPEN_BRACE      shift and go to state 4


state 4

    (1) program -> BEGIN ID OPEN_BRACE . full_module masFullModules MAIN full_block CLOSE_BRACE END
    (40) full_module -> . statement
    (41) full_module -> . variable
    (42) full_module -> . functionn
    (43) full_module -> . f_call
    (46) statement -> . printt
    (47) statement -> . readd
    (48) statement -> . condition
    (49) statement -> . asssign
    (50) statement -> . loop
    (56) variable -> . type var1 SEMI_COLON
    (83) functionn -> . FUNCTION type ID OPEN_PAREN params func1 CLOSE_PAREN f_block
    (102) f_call -> . ID OPEN_PAREN adata CLOSE_PAREN SEMI_COLON
    (17) printt -> . PRINT OPEN_PAREN exp_expression CLOSE_PAREN SEMI_COLON
    (16) readd -> . READ OPEN_PAREN ID COMMA expression CLOSE_PAREN SEMI_COLON
    (13) condition -> . IF OPEN_PAREN exp_expression CLOSE_PAREN block conditionaux
    (2) asssign -> . ID asssign1 SEMI_COLON
    (63) loop -> . forr
    (64) loop -> . whilee
    (51) type -> . VOID
    (52) type -> . BOOLEAN
    (53) type -> . INT
    (54) type -> . DOUBLE
    (55) type -> . STRING
    (62) forr -> . FOR OPEN_PAREN ID ASSIGN const SEMI_COLON expression SEMI_COLON ID expression CLOSE_PAREN block
    (75) whilee -> . WHILE OPEN_PAREN exp_expression CLOSE_PAREN block

    FUNCTION        shift and go to state 16
    ID              shift and go to state 22
    PRINT           shift and go to state 8
    READ            shift and go to state 6
    IF              shift and go to state 24
    VOID            shift and go to state 7
    BOOLEAN         shift and go to state 27
    INT             shift and go to state 25
    DOUBLE          shift and go to state 26
    STRING          shift and go to state 17
    FOR             shift and go to state 11
    WHILE           shift and go to state 9

    printt                         shift and go to state 10
    readd                          shift and go to state 5
    full_module                    shift and go to state 12
    statement                      shift and go to state 13
    type                           shift and go to state 14
    functionn                      shift and go to state 15
    whilee                         shift and go to state 18
    f_call                         shift and go to state 19
    variable                       shift and go to state 20
    forr                           shift and go to state 21
    condition                      shift and go to state 23
    loop                           shift and go to state 28
    asssign                        shift and go to state 29

state 5

    (47) statement -> readd .

    ID              reduce using rule 47 (statement -> readd .)
    PRINT           reduce using rule 47 (statement -> readd .)
    READ            reduce using rule 47 (statement -> readd .)
    IF              reduce using rule 47 (statement -> readd .)
    VOID            reduce using rule 47 (statement -> readd .)
    BOOLEAN         reduce using rule 47 (statement -> readd .)
    INT             reduce using rule 47 (statement -> readd .)
    DOUBLE          reduce using rule 47 (statement -> readd .)
    STRING          reduce using rule 47 (statement -> readd .)
    FOR             reduce using rule 47 (statement -> readd .)
    WHILE           reduce using rule 47 (statement -> readd .)
    CLOSE_BRACE     reduce using rule 47 (statement -> readd .)
    RETURN          reduce using rule 47 (statement -> readd .)
    FUNCTION        reduce using rule 47 (statement -> readd .)
    MAIN            reduce using rule 47 (statement -> readd .)


state 6

    (16) readd -> READ . OPEN_PAREN ID COMMA expression CLOSE_PAREN SEMI_COLON

    OPEN_PAREN      shift and go to state 30


state 7

    (51) type -> VOID .

    OPEN_BRACKET    reduce using rule 51 (type -> VOID .)
    ID              reduce using rule 51 (type -> VOID .)


state 8

    (17) printt -> PRINT . OPEN_PAREN exp_expression CLOSE_PAREN SEMI_COLON

    OPEN_PAREN      shift and go to state 31


state 9

    (75) whilee -> WHILE . OPEN_PAREN exp_expression CLOSE_PAREN block

    OPEN_PAREN      shift and go to state 32


state 10

    (46) statement -> printt .

    ID              reduce using rule 46 (statement -> printt .)
    PRINT           reduce using rule 46 (statement -> printt .)
    READ            reduce using rule 46 (statement -> printt .)
    IF              reduce using rule 46 (statement -> printt .)
    VOID            reduce using rule 46 (statement -> printt .)
    BOOLEAN         reduce using rule 46 (statement -> printt .)
    INT             reduce using rule 46 (statement -> printt .)
    DOUBLE          reduce using rule 46 (statement -> printt .)
    STRING          reduce using rule 46 (statement -> printt .)
    FOR             reduce using rule 46 (statement -> printt .)
    WHILE           reduce using rule 46 (statement -> printt .)
    CLOSE_BRACE     reduce using rule 46 (statement -> printt .)
    RETURN          reduce using rule 46 (statement -> printt .)
    FUNCTION        reduce using rule 46 (statement -> printt .)
    MAIN            reduce using rule 46 (statement -> printt .)


state 11

    (62) forr -> FOR . OPEN_PAREN ID ASSIGN const SEMI_COLON expression SEMI_COLON ID expression CLOSE_PAREN block

    OPEN_PAREN      shift and go to state 33


state 12

    (1) program -> BEGIN ID OPEN_BRACE full_module . masFullModules MAIN full_block CLOSE_BRACE END
    (44) masFullModules -> . full_module masFullModules
    (45) masFullModules -> .
    (40) full_module -> . statement
    (41) full_module -> . variable
    (42) full_module -> . functionn
    (43) full_module -> . f_call
    (46) statement -> . printt
    (47) statement -> . readd
    (48) statement -> . condition
    (49) statement -> . asssign
    (50) statement -> . loop
    (56) variable -> . type var1 SEMI_COLON
    (83) functionn -> . FUNCTION type ID OPEN_PAREN params func1 CLOSE_PAREN f_block
    (102) f_call -> . ID OPEN_PAREN adata CLOSE_PAREN SEMI_COLON
    (17) printt -> . PRINT OPEN_PAREN exp_expression CLOSE_PAREN SEMI_COLON
    (16) readd -> . READ OPEN_PAREN ID COMMA expression CLOSE_PAREN SEMI_COLON
    (13) condition -> . IF OPEN_PAREN exp_expression CLOSE_PAREN block conditionaux
    (2) asssign -> . ID asssign1 SEMI_COLON
    (63) loop -> . forr
    (64) loop -> . whilee
    (51) type -> . VOID
    (52) type -> . BOOLEAN
    (53) type -> . INT
    (54) type -> . DOUBLE
    (55) type -> . STRING
    (62) forr -> . FOR OPEN_PAREN ID ASSIGN const SEMI_COLON expression SEMI_COLON ID expression CLOSE_PAREN block
    (75) whilee -> . WHILE OPEN_PAREN exp_expression CLOSE_PAREN block

    MAIN            reduce using rule 45 (masFullModules -> .)
    FUNCTION        shift and go to state 16
    ID              shift and go to state 22
    PRINT           shift and go to state 8
    READ            shift and go to state 6
    IF              shift and go to state 24
    VOID            shift and go to state 7
    BOOLEAN         shift and go to state 27
    INT             shift and go to state 25
    DOUBLE          shift and go to state 26
    STRING          shift and go to state 17
    FOR             shift and go to state 11
    WHILE           shift and go to state 9

    printt                         shift and go to state 10
    readd                          shift and go to state 5
    full_module                    shift and go to state 34
    statement                      shift and go to state 13
    masFullModules                 shift and go to state 35
    type                           shift and go to state 14
    functionn                      shift and go to state 15
    whilee                         shift and go to state 18
    f_call                         shift and go to state 19
    variable                       shift and go to state 20
    forr                           shift and go to state 21
    condition                      shift and go to state 23
    loop                           shift and go to state 28
    asssign                        shift and go to state 29

state 13

    (40) full_module -> statement .

    FUNCTION        reduce using rule 40 (full_module -> statement .)
    ID              reduce using rule 40 (full_module -> statement .)
    PRINT           reduce using rule 40 (full_module -> statement .)
    READ            reduce using rule 40 (full_module -> statement .)
    IF              reduce using rule 40 (full_module -> statement .)
    VOID            reduce using rule 40 (full_module -> statement .)
    BOOLEAN         reduce using rule 40 (full_module -> statement .)
    INT             reduce using rule 40 (full_module -> statement .)
    DOUBLE          reduce using rule 40 (full_module -> statement .)
    STRING          reduce using rule 40 (full_module -> statement .)
    FOR             reduce using rule 40 (full_module -> statement .)
    WHILE           reduce using rule 40 (full_module -> statement .)
    MAIN            reduce using rule 40 (full_module -> statement .)
    CLOSE_BRACE     reduce using rule 40 (full_module -> statement .)


state 14

    (56) variable -> type . var1 SEMI_COLON
    (57) var1 -> . OPEN_BRACKET expression CLOSE_BRACKET var2
    (58) var1 -> . var2
    (59) var2 -> . ID var3

    OPEN_BRACKET    shift and go to state 38
    ID              shift and go to state 39

    var1                           shift and go to state 36
    var2                           shift and go to state 37

state 15

    (42) full_module -> functionn .

    FUNCTION        reduce using rule 42 (full_module -> functionn .)
    ID              reduce using rule 42 (full_module -> functionn .)
    PRINT           reduce using rule 42 (full_module -> functionn .)
    READ            reduce using rule 42 (full_module -> functionn .)
    IF              reduce using rule 42 (full_module -> functionn .)
    VOID            reduce using rule 42 (full_module -> functionn .)
    BOOLEAN         reduce using rule 42 (full_module -> functionn .)
    INT             reduce using rule 42 (full_module -> functionn .)
    DOUBLE          reduce using rule 42 (full_module -> functionn .)
    STRING          reduce using rule 42 (full_module -> functionn .)
    FOR             reduce using rule 42 (full_module -> functionn .)
    WHILE           reduce using rule 42 (full_module -> functionn .)
    MAIN            reduce using rule 42 (full_module -> functionn .)
    CLOSE_BRACE     reduce using rule 42 (full_module -> functionn .)


state 16

    (83) functionn -> FUNCTION . type ID OPEN_PAREN params func1 CLOSE_PAREN f_block
    (51) type -> . VOID
    (52) type -> . BOOLEAN
    (53) type -> . INT
    (54) type -> . DOUBLE
    (55) type -> . STRING

    VOID            shift and go to state 7
    BOOLEAN         shift and go to state 27
    INT             shift and go to state 25
    DOUBLE          shift and go to state 26
    STRING          shift and go to state 17

    type                           shift and go to state 40

state 17

    (55) type -> STRING .

    OPEN_BRACKET    reduce using rule 55 (type -> STRING .)
    ID              reduce using rule 55 (type -> STRING .)


state 18

    (64) loop -> whilee .

    RETURN          reduce using rule 64 (loop -> whilee .)
    ID              reduce using rule 64 (loop -> whilee .)
    PRINT           reduce using rule 64 (loop -> whilee .)
    READ            reduce using rule 64 (loop -> whilee .)
    IF              reduce using rule 64 (loop -> whilee .)
    VOID            reduce using rule 64 (loop -> whilee .)
    BOOLEAN         reduce using rule 64 (loop -> whilee .)
    INT             reduce using rule 64 (loop -> whilee .)
    DOUBLE          reduce using rule 64 (loop -> whilee .)
    STRING          reduce using rule 64 (loop -> whilee .)
    FOR             reduce using rule 64 (loop -> whilee .)
    WHILE           reduce using rule 64 (loop -> whilee .)
    CLOSE_BRACE     reduce using rule 64 (loop -> whilee .)
    FUNCTION        reduce using rule 64 (loop -> whilee .)
    MAIN            reduce using rule 64 (loop -> whilee .)


state 19

    (43) full_module -> f_call .

    FUNCTION        reduce using rule 43 (full_module -> f_call .)
    ID              reduce using rule 43 (full_module -> f_call .)
    PRINT           reduce using rule 43 (full_module -> f_call .)
    READ            reduce using rule 43 (full_module -> f_call .)
    IF              reduce using rule 43 (full_module -> f_call .)
    VOID            reduce using rule 43 (full_module -> f_call .)
    BOOLEAN         reduce using rule 43 (full_module -> f_call .)
    INT             reduce using rule 43 (full_module -> f_call .)
    DOUBLE          reduce using rule 43 (full_module -> f_call .)
    STRING          reduce using rule 43 (full_module -> f_call .)
    FOR             reduce using rule 43 (full_module -> f_call .)
    WHILE           reduce using rule 43 (full_module -> f_call .)
    MAIN            reduce using rule 43 (full_module -> f_call .)
    CLOSE_BRACE     reduce using rule 43 (full_module -> f_call .)


state 20

    (41) full_module -> variable .

    FUNCTION        reduce using rule 41 (full_module -> variable .)
    ID              reduce using rule 41 (full_module -> variable .)
    PRINT           reduce using rule 41 (full_module -> variable .)
    READ            reduce using rule 41 (full_module -> variable .)
    IF              reduce using rule 41 (full_module -> variable .)
    VOID            reduce using rule 41 (full_module -> variable .)
    BOOLEAN         reduce using rule 41 (full_module -> variable .)
    INT             reduce using rule 41 (full_module -> variable .)
    DOUBLE          reduce using rule 41 (full_module -> variable .)
    STRING          reduce using rule 41 (full_module -> variable .)
    FOR             reduce using rule 41 (full_module -> variable .)
    WHILE           reduce using rule 41 (full_module -> variable .)
    MAIN            reduce using rule 41 (full_module -> variable .)
    CLOSE_BRACE     reduce using rule 41 (full_module -> variable .)


state 21

    (63) loop -> forr .

    RETURN          reduce using rule 63 (loop -> forr .)
    ID              reduce using rule 63 (loop -> forr .)
    PRINT           reduce using rule 63 (loop -> forr .)
    READ            reduce using rule 63 (loop -> forr .)
    IF              reduce using rule 63 (loop -> forr .)
    VOID            reduce using rule 63 (loop -> forr .)
    BOOLEAN         reduce using rule 63 (loop -> forr .)
    INT             reduce using rule 63 (loop -> forr .)
    DOUBLE          reduce using rule 63 (loop -> forr .)
    STRING          reduce using rule 63 (loop -> forr .)
    FOR             reduce using rule 63 (loop -> forr .)
    WHILE           reduce using rule 63 (loop -> forr .)
    CLOSE_BRACE     reduce using rule 63 (loop -> forr .)
    FUNCTION        reduce using rule 63 (loop -> forr .)
    MAIN            reduce using rule 63 (loop -> forr .)


state 22

    (102) f_call -> ID . OPEN_PAREN adata CLOSE_PAREN SEMI_COLON
    (2) asssign -> ID . asssign1 SEMI_COLON
    (3) asssign1 -> . OPEN_BRACKET asssign2
    (4) asssign1 -> . ASSIGN expression

    OPEN_PAREN      shift and go to state 44
    OPEN_BRACKET    shift and go to state 41
    ASSIGN          shift and go to state 42

    asssign1                       shift and go to state 43

state 23

    (48) statement -> condition .

    ID              reduce using rule 48 (statement -> condition .)
    PRINT           reduce using rule 48 (statement -> condition .)
    READ            reduce using rule 48 (statement -> condition .)
    IF              reduce using rule 48 (statement -> condition .)
    VOID            reduce using rule 48 (statement -> condition .)
    BOOLEAN         reduce using rule 48 (statement -> condition .)
    INT             reduce using rule 48 (statement -> condition .)
    DOUBLE          reduce using rule 48 (statement -> condition .)
    STRING          reduce using rule 48 (statement -> condition .)
    FOR             reduce using rule 48 (statement -> condition .)
    WHILE           reduce using rule 48 (statement -> condition .)
    CLOSE_BRACE     reduce using rule 48 (statement -> condition .)
    RETURN          reduce using rule 48 (statement -> condition .)
    FUNCTION        reduce using rule 48 (statement -> condition .)
    MAIN            reduce using rule 48 (statement -> condition .)


state 24

    (13) condition -> IF . OPEN_PAREN exp_expression CLOSE_PAREN block conditionaux

    OPEN_PAREN      shift and go to state 45


state 25

    (53) type -> INT .

    OPEN_BRACKET    reduce using rule 53 (type -> INT .)
    ID              reduce using rule 53 (type -> INT .)


state 26

    (54) type -> DOUBLE .

    OPEN_BRACKET    reduce using rule 54 (type -> DOUBLE .)
    ID              reduce using rule 54 (type -> DOUBLE .)


state 27

    (52) type -> BOOLEAN .

    OPEN_BRACKET    reduce using rule 52 (type -> BOOLEAN .)
    ID              reduce using rule 52 (type -> BOOLEAN .)


state 28

    (50) statement -> loop .

    ID              reduce using rule 50 (statement -> loop .)
    PRINT           reduce using rule 50 (statement -> loop .)
    READ            reduce using rule 50 (statement -> loop .)
    IF              reduce using rule 50 (statement -> loop .)
    VOID            reduce using rule 50 (statement -> loop .)
    BOOLEAN         reduce using rule 50 (statement -> loop .)
    INT             reduce using rule 50 (statement -> loop .)
    DOUBLE          reduce using rule 50 (statement -> loop .)
    STRING          reduce using rule 50 (statement -> loop .)
    FOR             reduce using rule 50 (statement -> loop .)
    WHILE           reduce using rule 50 (statement -> loop .)
    CLOSE_BRACE     reduce using rule 50 (statement -> loop .)
    RETURN          reduce using rule 50 (statement -> loop .)
    FUNCTION        reduce using rule 50 (statement -> loop .)
    MAIN            reduce using rule 50 (statement -> loop .)


state 29

    (49) statement -> asssign .

    ID              reduce using rule 49 (statement -> asssign .)
    PRINT           reduce using rule 49 (statement -> asssign .)
    READ            reduce using rule 49 (statement -> asssign .)
    IF              reduce using rule 49 (statement -> asssign .)
    VOID            reduce using rule 49 (statement -> asssign .)
    BOOLEAN         reduce using rule 49 (statement -> asssign .)
    INT             reduce using rule 49 (statement -> asssign .)
    DOUBLE          reduce using rule 49 (statement -> asssign .)
    STRING          reduce using rule 49 (statement -> asssign .)
    FOR             reduce using rule 49 (statement -> asssign .)
    WHILE           reduce using rule 49 (statement -> asssign .)
    CLOSE_BRACE     reduce using rule 49 (statement -> asssign .)
    RETURN          reduce using rule 49 (statement -> asssign .)
    FUNCTION        reduce using rule 49 (statement -> asssign .)
    MAIN            reduce using rule 49 (statement -> asssign .)


state 30

    (16) readd -> READ OPEN_PAREN . ID COMMA expression CLOSE_PAREN SEMI_COLON

    ID              shift and go to state 46


state 31

    (17) printt -> PRINT OPEN_PAREN . exp_expression CLOSE_PAREN SEMI_COLON
    (21) exp_expression -> . expression eee
    (27) expression -> . expression1 exp expression2
    (28) expression1 -> . NEGATION
    (29) expression1 -> .

    NEGATION        shift and go to state 48
    OPEN_PAREN      reduce using rule 29 (expression1 -> .)
    CINT            reduce using rule 29 (expression1 -> .)
    CDOUBLE         reduce using rule 29 (expression1 -> .)
    CSTRING         reduce using rule 29 (expression1 -> .)
    ID              reduce using rule 29 (expression1 -> .)
    TRUE            reduce using rule 29 (expression1 -> .)
    FALSE           reduce using rule 29 (expression1 -> .)

    expression1                    shift and go to state 47
    exp_expression                 shift and go to state 49
    expression                     shift and go to state 50

state 32

    (75) whilee -> WHILE OPEN_PAREN . exp_expression CLOSE_PAREN block
    (21) exp_expression -> . expression eee
    (27) expression -> . expression1 exp expression2
    (28) expression1 -> . NEGATION
    (29) expression1 -> .

    NEGATION        shift and go to state 48
    OPEN_PAREN      reduce using rule 29 (expression1 -> .)
    CINT            reduce using rule 29 (expression1 -> .)
    CDOUBLE         reduce using rule 29 (expression1 -> .)
    CSTRING         reduce using rule 29 (expression1 -> .)
    ID              reduce using rule 29 (expression1 -> .)
    TRUE            reduce using rule 29 (expression1 -> .)
    FALSE           reduce using rule 29 (expression1 -> .)

    expression1                    shift and go to state 47
    exp_expression                 shift and go to state 51
    expression                     shift and go to state 50

state 33

    (62) forr -> FOR OPEN_PAREN . ID ASSIGN const SEMI_COLON expression SEMI_COLON ID expression CLOSE_PAREN block

    ID              shift and go to state 52


state 34

    (44) masFullModules -> full_module . masFullModules
    (44) masFullModules -> . full_module masFullModules
    (45) masFullModules -> .
    (40) full_module -> . statement
    (41) full_module -> . variable
    (42) full_module -> . functionn
    (43) full_module -> . f_call
    (46) statement -> . printt
    (47) statement -> . readd
    (48) statement -> . condition
    (49) statement -> . asssign
    (50) statement -> . loop
    (56) variable -> . type var1 SEMI_COLON
    (83) functionn -> . FUNCTION type ID OPEN_PAREN params func1 CLOSE_PAREN f_block
    (102) f_call -> . ID OPEN_PAREN adata CLOSE_PAREN SEMI_COLON
    (17) printt -> . PRINT OPEN_PAREN exp_expression CLOSE_PAREN SEMI_COLON
    (16) readd -> . READ OPEN_PAREN ID COMMA expression CLOSE_PAREN SEMI_COLON
    (13) condition -> . IF OPEN_PAREN exp_expression CLOSE_PAREN block conditionaux
    (2) asssign -> . ID asssign1 SEMI_COLON
    (63) loop -> . forr
    (64) loop -> . whilee
    (51) type -> . VOID
    (52) type -> . BOOLEAN
    (53) type -> . INT
    (54) type -> . DOUBLE
    (55) type -> . STRING
    (62) forr -> . FOR OPEN_PAREN ID ASSIGN const SEMI_COLON expression SEMI_COLON ID expression CLOSE_PAREN block
    (75) whilee -> . WHILE OPEN_PAREN exp_expression CLOSE_PAREN block

    MAIN            reduce using rule 45 (masFullModules -> .)
    FUNCTION        shift and go to state 16
    ID              shift and go to state 22
    PRINT           shift and go to state 8
    READ            shift and go to state 6
    IF              shift and go to state 24
    VOID            shift and go to state 7
    BOOLEAN         shift and go to state 27
    INT             shift and go to state 25
    DOUBLE          shift and go to state 26
    STRING          shift and go to state 17
    FOR             shift and go to state 11
    WHILE           shift and go to state 9

    printt                         shift and go to state 10
    full_module                    shift and go to state 34
    statement                      shift and go to state 13
    masFullModules                 shift and go to state 53
    type                           shift and go to state 14
    functionn                      shift and go to state 15
    whilee                         shift and go to state 18
    readd                          shift and go to state 5
    f_call                         shift and go to state 19
    variable                       shift and go to state 20
    forr                           shift and go to state 21
    condition                      shift and go to state 23
    loop                           shift and go to state 28
    asssign                        shift and go to state 29

state 35

    (1) program -> BEGIN ID OPEN_BRACE full_module masFullModules . MAIN full_block CLOSE_BRACE END

    MAIN            shift and go to state 54


state 36

    (56) variable -> type var1 . SEMI_COLON

    SEMI_COLON      shift and go to state 55


state 37

    (58) var1 -> var2 .

    SEMI_COLON      reduce using rule 58 (var1 -> var2 .)


state 38

    (57) var1 -> OPEN_BRACKET . expression CLOSE_BRACKET var2
    (27) expression -> . expression1 exp expression2
    (28) expression1 -> . NEGATION
    (29) expression1 -> .

    NEGATION        shift and go to state 48
    OPEN_PAREN      reduce using rule 29 (expression1 -> .)
    CINT            reduce using rule 29 (expression1 -> .)
    CDOUBLE         reduce using rule 29 (expression1 -> .)
    CSTRING         reduce using rule 29 (expression1 -> .)
    ID              reduce using rule 29 (expression1 -> .)
    TRUE            reduce using rule 29 (expression1 -> .)
    FALSE           reduce using rule 29 (expression1 -> .)

    expression1                    shift and go to state 47
    expression                     shift and go to state 56

state 39

    (59) var2 -> ID . var3
    (60) var3 -> . COMMA var2
    (61) var3 -> .

    COMMA           shift and go to state 57
    SEMI_COLON      reduce using rule 61 (var3 -> .)

    var3                           shift and go to state 58

state 40

    (83) functionn -> FUNCTION type . ID OPEN_PAREN params func1 CLOSE_PAREN f_block

    ID              shift and go to state 59


state 41

    (3) asssign1 -> OPEN_BRACKET . asssign2
    (5) asssign2 -> . expression CLOSE_BRACKET ASSIGN expression
    (6) asssign2 -> . CLOSE_BRACKET ASSIGN OPEN_BRACE adata CLOSE_BRACE
    (27) expression -> . expression1 exp expression2
    (28) expression1 -> . NEGATION
    (29) expression1 -> .

    CLOSE_BRACKET   shift and go to state 60
    NEGATION        shift and go to state 48
    OPEN_PAREN      reduce using rule 29 (expression1 -> .)
    CINT            reduce using rule 29 (expression1 -> .)
    CDOUBLE         reduce using rule 29 (expression1 -> .)
    CSTRING         reduce using rule 29 (expression1 -> .)
    ID              reduce using rule 29 (expression1 -> .)
    TRUE            reduce using rule 29 (expression1 -> .)
    FALSE           reduce using rule 29 (expression1 -> .)

    expression                     shift and go to state 62
    asssign2                       shift and go to state 61
    expression1                    shift and go to state 47

state 42

    (4) asssign1 -> ASSIGN . expression
    (27) expression -> . expression1 exp expression2
    (28) expression1 -> . NEGATION
    (29) expression1 -> .
